--- a/commonrefreshlayout/build.gradle
+++ b/commonrefreshlayout/build.gradle
@@ -25,13 +25,14 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:recyclerview-v7:23.3.0'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
 }
 
 def siteUrl = 'https://github.com/mylhyl/Android-CommonRefreshLayout'
 def gitUrl = 'https://github.com/mylhyl/Android-CommonRefreshLayout.git'
+
 group = "com.mylhyl"
-version = "1.0"
+version = "1.1"
 
 install {
     repositories.mavenInstaller {
@@ -39,16 +40,16 @@ install {
             project {
                 packaging 'aar'
                 artifactId 'commonrefreshlayout'
-                name 'android pull refresh layout' //添加项目描述
+                name 'android pull refresh layout'
                 url siteUrl
-                //设置开源证书信息
+
                 licenses {
                     license {
                         name 'The Apache Software License, Version 2.0'
                         url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
                     }
                 }
-                //填写开发者基本信息
+
                 developers {
                     developer {
                         id 'mylhyl'
@@ -86,21 +87,20 @@ artifacts {
     archives javadocJar
     archives sourcesJar
 }
-//配置上传bintray相关信息
+
 Properties properties = new Properties()
 properties.load(project.rootProject.file('local.properties').newDataInputStream())
+
 bintray {
-    //读取bintray帐号和密码。
-    //一般的为了保密和安全性，在项目的local.properties文件中添加两行句话即可：
     user = properties.getProperty("BINTRAY_USER")
     key = properties.getProperty("BINTRAY_KEY")
     configurations = ['archives']
     pkg {
-        repo = "maven" //上传的中央仓库名称
-        name = "commonrefreshlayout" //上传的项目的名字
+        repo = "maven"
+        name = "commonrefreshlayout"
         websiteUrl = siteUrl
         vcsUrl = gitUrl
         licenses = ["Apache-2.0"]
-        publish = true //是否发布
+        publish = true
     }
 }
