--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -25,4 +25,7 @@ dependencies {
     compile project(':commonrefreshlayout')
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:support-v4:23.3.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.mylhyl:cygadapter:1.0.0'
+    compile files('libs/lite-http-3.0.0.jar')
 }
