--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.mylhyl:cygadapter:1.0.0'
     compile files('libs/lite-http-3.0.0.jar')
+    compile 'com.android.support:cardview-v7:23.3.0'
 }
